--- a/src/main.css
+++ b/src/main.css
@@ -1,10 +1,15 @@
 @import "//fonts.googleapis.com/css?family=Exo+2:400,400i,700&amp;subset=latin-ext"; /*!normalize.css v3.0.1 | MIT License | git.io/normalize*/
 html {
-  font-family: sans-serif;
+  font-family: "Exo 2";
+  font-weight: 500;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
 body {
+  font-family: 'Exo 2', Helvetica Neue, Helvetica, Arial, sans-serif;
+  line-height: 1.428571429;
+  color: #fff;
+  background-color: #222;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -84,66 +89,10 @@ td,
 th {
   padding: 0;
 }
-@media print {
-  * {
-    text-shadow: none !important;
-    color: #000 !important;
-    background: 0 0 !important;
-    box-shadow: none !important;
-  }
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
-  a[href]:after {
-    content: " (" attr(href) ")";
-  }
-  a[href^="#"]:after,
-  a[href^="javascript:"]:after {
-    content: "";
-  }
-  thead {
-    display: table-header-group;
-  }
-  img,
-  tr {
-    page-break-inside: avoid;
-  }
-  img {
-    max-width: 100% !important;
-  }
-  h2,
-  h3,
-  p {
-    orphans: 3;
-    widows: 3;
-  }
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
-  select {
-    background: #fff !important;
-  }
-  .navbar {
-    display: none;
-  }
-}
 *,
 :after,
 :before {
   box-sizing: border-box;
-}
-html {
-  font-size: 10px;
-  -webkit-tap-highlight-color: transparent;
-}
-body {
-  font-family: exo\2, Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.428571429;
-  color: #fff;
-  background-color: #222;
 }
 button,
 input,
@@ -240,14 +189,14 @@ ul ul {
     width: 750px;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 900px) {
   .container {
     width: 970px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 1000px;
   }
 }
 table {
